--- a/lib/vlc_web/live/page_live.html.leex
+++ b/lib/vlc_web/live/page_live.html.leex
@@ -1,28 +1,58 @@
-<section class="phx-hero">
-  <%= if @current_file && @vlc_port do %>
-    Currently playing <%= @current_file %>
-    <button phx-click="stop">&#x23f9;</button>
-  <% end %>
+<section class="box">
+  <form phx-change="suggest" class="form" phx-submit="reload">
+    <div class="columns">
+      <div class="column is-four-fifths">
+        <div class="field">
+          <div class="control">
+            <input class="input" type="text" name="q" value="<%= @query %>" placeholder="Filter" autocomplete="off"/>
+          </div>
+        </div>
+      </div>
 
-  <form phx-change="suggest">
-    <input type="text" name="q" value="<%= @query %>" placeholder="Filter" autocomplete="off"/>
+      <div class="column">
+        <div class="field">
+          <div class="control has-text-right">
+            <button phx-click="reload" title="Reload file list" title="Stop current-video" class="button is-info <%= if @loading do %>is-loading<% end %>"><i class="fas fa-sync"></i></button>
+          </div>
+        </div>
+      </div>
+    </div>
   </form>
-  <button phx-click="reload">&#x1f5d8;</button>
 </section>
 
-<%= if @loading do %>
-  Loading...
-<% end %>
-<%= for {fname, path} <- @suggestions do %>
-  <div class="tooltip">
-    <%= if @current_file && @vlc_port do %>
-      <button phx-click="stop">&#x23f9;</button>
-    <% else %>
-      <button phx-click="play" phx-value-fname="<%= fname %>" phx-value-path="<%= path %>">&#x25b6;</button>
-    <% end %>
-
-    <%= fname %>
-    <span class="tooltiptext">
-    </span>
+<%= if @current_file && @vlc_port do %>
+  <div class="message is-info">
+    <div class="message-header">
+      Currently playing
+      <button phx-click="stop" class="delete"></button>
+    </div>
+    <div class="message-body">
+      <%= @current_file %>
+    </div>
   </div>
 <% end %>
+
+<table class="table is-hoverable is-fullwidth">
+  <tbody>
+    <%= for {fname, path} <- @suggestions do %>
+    <tr>
+        <td>
+        <%= if @current_file && @vlc_port do %>
+        <button title="Stop current video" class="button is-info" phx-click="stop"><i class="fas fa-stop"></i></button>
+        <% else %>
+          <button title="Play file <%= path %>"class="button is-success" phx-click="play" phx-value-fname="<%= fname %>" phx-value-path="<%= path %>"><i class="fas fa-play"></i></button>
+        <% end %>
+        </td>
+
+        <td class="is-vcentered">
+          <span class="is-hidden-mobile">
+            <%= fname %>
+          </span>
+          <span class="is-hidden-tablet-only is-hidden-desktop-only is-hidden-widescreen-only">
+            <%= String.slice(fname, 0..24) %>...
+          </span>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
