--- a/lib/vlc_web/templates/layout/root.html.leex
+++ b/lib/vlc_web/templates/layout/root.html.leex
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= csrf_meta_tag() %>
     <%= live_title_tag assigns[:page_title] || "Vlc", suffix: " · Phoenix Framework" %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" crossorigin="anonymous">
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <%= @inner_content %>
+    <div class="section">
+      <div class="container">
+        <div class="content">
+          <%= @inner_content %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
