--- a/lib/media_web/live/page_live.html.leex
+++ b/lib/media_web/live/page_live.html.leex
@@ -12,7 +12,8 @@
       <div class="column">
         <div class="field">
           <div class="control has-text-right">
-            <button phx-click="reload" title="Reload file list" title="Stop current-video" class="button is-info <%= if @loading do %>is-loading<% end %>"><i class="fas fa-sync"></i></button>
+            <a phx-click="clear_filter" title="Clear filter" class="button is-warning"><i class="fas fa-trash"></i></a>
+            <a phx-click="reload" title="Reload file list" class="button is-info <%= if @loading do %>is-loading<% end %>"><i class="fas fa-sync"></i></a>
           </div>
         </div>
       </div>
